fix: Capture incorrect heading from md

--- a/mdx/pro/coins-id-ohlc.mdx
+++ b/mdx/pro/coins-id-ohlc.mdx
@@ -2,6 +2,15 @@
 openapi: api-reference/coingecko-pro.json get /coins/{id}/ohlc
 ---
 
+<Tip>
+### Tips
+- You may obtain the coin ID (API ID) via several ways:
+  - refers to respective coin page and find 'API ID'.
+  - refers to [`/coins/list`](<https://docs.coingecko.com/reference/coins-list>) endpoint.
+  - refers to Google Sheets [here](https://docs.google.com/spreadsheets/d/1wTTuxXt8n9q7C4NDXqQpI3wpKu1_5bGVmP9Xz0XGSyU/edit?usp=sharing).
+- For historical chart data with better granularity, you may consider using [/coins/\{id}/market\_chart](/reference/coins-id-market-chart) endpoint.
+</Tip>
+
 <Note>
 ### Note
 - The timestamp displayed in the payload (response) indicates the end (or close) time of the OHLC data.
